2010-01-03:
* Made it simpler to add regular expression based parsers
* Regexp is now verbose and expects named capturing groups lnk, pth and ln
* Created a standard regexp that covers gcc, javac and parts of ruby
* Created regex for valac
* Changed python parser from a class to regexp
* Refactored the linkparsing_test.py to make it easier to write tests