@@ -131,6 +131,15 @@ test.rb:5: undefined method `fake_method' for main:Object (NoMethodError)
         self.assert_link(lnk, "test.rb", 3)
         self.assert_link_text(output, lnk, 'test.rb:3')
 
+
+    def test_parse_scalac_one_line(self):
+        line = "Test.scala:7: error: not found: value fakeMethod"
+        links = self.p.parse(line)
+        self.assert_link_count(links, 1)
+        lnk = links[0]
+        self.assert_link(lnk, "Test.scala", 7)
+        self.assert_link_text(line, lnk, 'Test.scala:7')
+
 if __name__ == '__main__':
     unittest.main()
 
