@@ -1,0 +1,9 @@
+// this file contains errors on purpose
+
+object HelloWorld {
+    def main(args: Array[String]) {
+        var a:int = "xx";
+        println("Hello, world!")
+        fakeMethod()
+    }
+}
